--- a/webui/src/app.css
+++ b/webui/src/app.css
@@ -1,8 +1,6 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 @plugin "daisyui" {
-  themes:
-    light --default,
-    dark --prefersdark,
-    winter;
+  themes: all;
 }
